# morelibc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_picolibc.sh
cmake/: picolibc.cmake
doc/: concurrency.md  environment.md  filesystem.md  functions.md  socket.md  terminals.md
example/: CMakeLists.txt  main.c  morelib_cfg.c
freertos/: CMakeLists.txt  heap_malloc.c  interrupts.c  port_hooks.c  timers.c
freertos/include/: FreeRTOSConfig.h
freertos/include/freertos/: interrupts.h  timers.h
lwip/: CMakeLists.txt  arpa_inet.c  dns.c  dns.h  net_if.c  netdb.c  ping.c  raw.c  socket.c  socket.h  socket_api.c  socket_opt.c  tcp.c  telnet.c  tls_context.c  tls_socket.c  udp.c
lwip/include/: netdb.h
lwip/include/arpa/: inet.h
lwip/include/morelib/: ping.h  telnet.h
lwip/include/morelib/lwip/: dns.h  lwip.h  socket.h  tls.h
lwip/include/net/: if.h
lwip/include/netinet/: in.h  tcp.h
lwip/include/sys/: socket.h
morelib/: CMakeLists.txt  README.md  crc.c  dev.c  devfs.c  dirent.c  dl_init.c  dlfcn.c  epoll.c  event.c  eventfd.c  fatfs.c  fcntl.c  flash.c  flash_env.c  flash_heap.c  ioctl.c  littlefs.c  lock.c  loop.c  mem.c  mman.c  mtdblk.c  netdb.c  newlib.c  pipe.c  poll.c  posix.c  random.c  ring.c  signal.c  socket.c  stat.c  statvfs.c  syslog.c  term_mux.c  termios.c  thread.c  time.c  tty.c  (+4 more)
morelib/include/: dlfcn.h  netdb.h  poll.h  syslog.h
morelib/include/morelib/: crc.h  dev.h  devfs.h  dlfcn.h  event.h  fatfs.h  flash.h  flash_heap.h  gpio.h  i2cdev.h  ioctl.h  littlefs.h  loop.h  mem.h  mount.h  mtd.h  mtdblk.h  pipe.h  poll.h  ring.h  signal.h  socket.h  spidev.h  stat.h  termios.h  thread.h  tty.h  vfs.h
morelib/include/newlib/: dhara.h  dlfcn.h  event.h  fatfs.h  ioctl.h  littlefs.h  mem.h  mount.h  mtd.h  mtdblk.h  newlib.h  ring.h  thread.h  tty.h  vfs.h
morelib/include/sys/: dirent.h  epoll.h  eventfd.h  ioctl.h  mman.h  random.h  socket.h  statvfs.h  termios.h  timerfd.h  un.h  utsname.h
morelib/tools/: elf.py  elfmodel.py  mkextmod.py  mkfirmware.py
ports/rp2/: flash.h  memmap_exe_rp2040.ld  memmap_exe_rp2350.ld  memmap_lib_rp2350.ld  mtd.c  random.c  sdcard.c  spi.c  term_uart.c  time.c  uart.c
ports/rp2/include/rp2/: cyw43_driver.h  dma.h  fifo.h  irq.h  mtd.h  pio.h  sdcard.h  spi.h  term_uart.h
rp2/: CMakeLists.txt  README.md  cyw43_driver.c  cyw43_lwip.c  dma.c  fifo.c  flash.c  flash_lockout.c  gpio.c  gpiodev.c  i2c.c  i2cdev.c  irq.c  memmap_exe_rp2040.ld  memmap_exe_rp2350-arm-s.ld  memmap_exe_rp2350.ld  memmap_lib_rp2040.ld  morelibc_interface.c  mtd.c  pico-sdk.cmake  pio.c  pio_sm.c  pwm.c  sdcard.c  spi.c  spidev.c  term_uart.c  time.c  uart.c
rp2/include/pico/: cyw43_driver.h
rp2/include/rp2/: dma.h  fifo.h  flash_lockout.h  gpio.h  gpiodev.h  i2c.h  i2cdev.h  irq.h  mtd.h  pio.h  pio_sm.h  pioasm.h  pwm.h  sdcard.h  spi.h  spidev.h  term_uart.h  uart.h
rp2/include/sys/: cdefs.h
rp2/pioasm/: CMakeLists.txt  README.md  pioasm.c  pioasm.h  pioasm_internal.h  pioasm_lexer.c  pioasm_parser.c  pioasm_test.c
rp2/pioasm/host/hardware/: pio.h
tinyusb/: CMakeLists.txt  README.md  cdc_device_cb.c  msc_device.c  net_device_lwip.c  term_usb.c  tusb_config.c  tusb_lock.c  usbd_cb.c
tinyusb/include/tinyusb/: cdc_device_cb.h  msc_device.h  net_device_lwip.h  term_usb.h  tusb_config.h  tusb_lock.h
